log
Wed 10 May 2023 03:21:14 AM UTC: 
 tests:  0|4
total_score: 0/70
9a75fe6
Wed 10 May 2023 03:30:46 AM UTC: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
55146aa
Wed 10 May 2023 03:33:55 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|4
total_score: 0/70
ade2817
Wed 10 May 2023 03:37:38 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
99e7fc5
Wed 10 May 2023 03:38:28 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6625bb2
Wed 10 May 2023 04:07:35 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
25b7696
Wed 10 May 2023 04:38:30 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a05c254
Wed 10 May 2023 04:38:45 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
2bb7f94
Wed 10 May 2023 04:39:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
bdc15d9
Wed 10 May 2023 04:39:10 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b1397f7
Wed 10 May 2023 04:39:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
348e0a2
Wed 10 May 2023 04:39:24 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aa0cac5
Wed 10 May 2023 04:39:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f24eff
Wed 10 May 2023 04:46:32 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
eea4241
Wed 10 May 2023 04:50:07 AM UTC: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  1|3
total_score: 10/70
15639c0
Wed 10 May 2023 04:54:49 AM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
711d597
Wed 10 May 2023 04:56:28 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
38bf4db
Wed 10 May 2023 04:56:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
493b0e0
Wed 10 May 2023 04:57:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:29:9: error: unused variable ‘dato’ [-Werror=unused-variable]
   29 |   void* dato = nuevo->heapArray[0].data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
1f1a74b
Wed 10 May 2023 04:57:11 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
dd21845
Wed 10 May 2023 04:57:54 AM UTC: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
d9c0f28
Wed 10 May 2023 04:58:43 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
97004aa
Fri 12 May 2023 04:20:30 AM UTC: 
 heap.c | 31 ++++++++++++++++++++-----------
 1 file changed, 20 insertions(+), 11 deletions(-)
 tests:  7|1
total_score: 45/70
02b770b
Fri 12 May 2023 06:53:25 PM UTC: 
 heap.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heaoifyHaciaAbajo’:
heap.c:71:5: error: implicit declaration of function ‘heapifyHaciaAbajo’; did you mean ‘heaoifyHaciaAbajo’? [-Werror=implicit-function-declaration]
   71 |     heapifyHaciaAbajo(pq, mayor);
      |     ^~~~~~~~~~~~~~~~~
      |     heaoifyHaciaAbajo
cc1: all warnings being treated as errors
Compilation failed
25a61ac
